--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
   "name": "@stenway/sml",
-  "version": "0.0.2",
-  "description": "Stefan John / Stenway / SimpleML.com / 2022",
+  "version": "0.2.0",
+  "description": "Stefan John / Stenway / SimpleML.com / 2023",
   "homepage": "https://www.simpleml.com",
   "repository": "github:Stenway/SML-TS",
   "bugs": {
     "url": "https://github.com/Stenway/SML-TS/issues"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/src/index.js",
+  "types": "dist/src/index.d.ts",
   "files": [
-    "/dist"
+    "/dist/src"
   ],
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint src",
+    "test": "tsc && jest --coverage"
   },
   "keywords": [
     "simple markup language",
+    "sml",
+    "simpleml",
     "markup language",
+    "alternative",
     "xml",
     "json",
     "yaml"
@@ -25,10 +30,18 @@
   "author": "Stefan John",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
+    "eslint": "^8.30.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "@stenway/reliabletxt": "^0.0.2",
-    "@stenway/wsv": "^0.0.2"
+    "@stenway/reliabletxt": "^0.2.0",
+    "@stenway/wsv": "^0.2.0"
   }
 }
