--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stenway/sml",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "type": "module",
   "description": "Serialize and deserialze SML documents",
   "homepage": "https://www.simpleml.com",
@@ -26,7 +26,10 @@
     "alternative",
     "xml",
     "json",
-    "yaml"
+    "yaml",
+    "binarysml",
+    "bsml",
+    "varint56"
   ],
   "author": "Stefan John",
   "license": "MIT",
@@ -42,7 +45,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@stenway/reliabletxt": "^0.6.0",
-    "@stenway/wsv": "^0.6.0"
+    "@stenway/reliabletxt": "^0.7.0",
+    "@stenway/wsv": "^0.7.0"
   }
 }
